# gofer-smash

./: CMakeLists.txt  README  game.cpp  game.h  glove_png.h  gofer.qrc  gopher-smash.pro  main.cpp  pie.h  pie_png.h  pow_png.h  selectsmash.cpp  smash.cpp  smash.h  smash_png.h  splat_png.h
effects/: CMakeLists.txt  boxing.cpp  boxing.h  pie.cpp
